# helios

./: .dockerignore  .gitignore  .lintstagedrc  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.dind  README.md  docker-bake.hcl  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  start.sh  tsconfig.json
.github/workflows/: flowzone.yml
.versionbot/: CHANGELOG.yml
helios/: Cargo.toml  README.md
helios-api/: Cargo.toml  README.md
helios-api/src/: lib.rs
helios-balenahup/: Cargo.toml
helios-balenahup/src/: lib.rs  models.rs  overlays.rs  read.rs  reboot.rs  tasks.rs
helios-core/: Cargo.toml
helios-core/src/: config.rs  types.rs
helios-core/src/util/: http.rs
helios-integration-tests/: Cargo.toml  Dockerfile  Dockerfile.mock-remote  helios-util
helios-integration-tests/src/: api_tests.rs  common.rs  lib.rs  polling_tests.rs  util_tests.rs
helios-legacy/: Cargo.toml  README.md
helios-legacy/src/: config.rs  error.rs  lib.rs  proxy.rs  state.rs  takeover.rs
helios-oci/: Cargo.toml  README.md
helios-oci/src/: container.rs  datetime.rs  image.rs  lib.rs  models.rs  network.rs  ports.rs  registry.rs  volume.rs
helios-podman/: Cargo.toml  README.md
helios-podman/src/: lib.rs
helios-podman/src/podlet/: escape.rs  mod.rs
helios-podman/src/podlet/quadlet/: container.rs  globals.rs  install.rs  mod.rs  network.rs  service.rs  unit.rs  volume.rs
helios-podman/src/podlet/quadlet/container/: device.rs  mount.rs  rootfs.rs  volume.rs
helios-podman/src/podlet/quadlet/container/mount/: idmap.rs  mode.rs  tmpfs.rs
helios-podman/src/podlet/serde/: args.rs  mod.rs  quadlet.rs
helios-podman/src/podlet/serde/mount_options/: de.rs  mod.rs  ser.rs
helios-podman/src/quadlet/: labels.rs  mod.rs
helios-remote/: Cargo.toml  README.md
helios-remote-model/: Cargo.toml  README.md
helios-remote-model/src/: byte_size.rs  duration.rs  labels.rs  lib.rs  network.rs  service.rs  volume.rs
helios-remote-model/src/service/: cgroup.rs  command.rs  depends_on.rs  healthcheck.rs  mod.rs  network_mode.rs  networks.rs  ports.rs  restart_policy.rs  volumes.rs
helios-remote-types/: Cargo.toml  README.md
helios-remote-types/src/: lib.rs
helios-remote/src/: config.rs  lib.rs  poll.rs  provisioning.rs  report.rs
helios-state/: Cargo.toml  README.md
helios-state/src/: config.rs  labels.rs  lib.rs  read.rs  resources.rs  seek.rs  worker.rs
helios-state/src/models/: app.rs  defaults.rs  device.rs  host.rs  hostapp.rs  image.rs  mod.rs  network.rs  release.rs  service.rs  volume.rs
helios-state/src/models/service/: config.rs  container_name.rs  depends_on.rs  mod.rs
helios-state/src/tasks/: app.rs  device.rs  helpers.rs  host.rs  image.rs  mod.rs  utils.rs
helios-state/src/worker/tests/: apps.rs  helpers.rs  hostapp.rs  migrations.rs  mod.rs  networks.rs  services.rs  volumes.rs
helios-store/: Cargo.toml  README.md
helios-store/src/: async_store.rs  document.rs  lib.rs  view.rs
helios-store/src/db/: glob.rs  handle.rs  id.rs  locking.rs  mod.rs  read.rs  stage.rs  util.rs  write.rs
helios-store/src/util/: digest.rs  fs.rs  glob.rs  hex.rs  mod.rs
helios-util/: Cargo.toml  README.md  build.rs
helios-util/src/: config.rs  crypto.rs  dirs.rs  fs.rs  http.rs  interrupt.rs  json.rs  lib.rs  locking.rs  logs.rs  network.rs  proc.rs  rand.rs  request.rs  state.rs  store.rs  systemd.rs  tar.rs  types.rs
helios-util/src/types/: api_key.rs  environment.rs  image_uri.rs  mod.rs  operating_system.rs  uuid.rs
helios/src/: cli.rs  main.rs
integration/: Cargo.toml  Dockerfile  README.md
integration/src/: lib.rs
livepush/: device.ts  docker.ts  index.ts  livepush.ts  target-state.ts  utils.ts
scripts/: setup-supervisor.sh  start.sh  supervisor-takeover.sh
src/: api.rs  cli.rs  config.rs  fallback.rs  main.rs  overrides.rs  register.rs  remote.rs  report.rs  request.rs  state.rs  target.rs  types.rs
src/api/: fallback.rs  mod.rs  proxy.rs
src/cmd/: default.rs  mod.rs  register.rs
src/control/: mod.rs
src/fallback/: config.rs  error.rs  mod.rs  proxy.rs  state.rs
src/legacy/: config.rs  error.rs  mod.rs  proxy.rs  state.rs
src/link/: mod.rs  request.rs  uplink.rs
src/models/: mod.rs
src/oci/: image.rs  mod.rs  registry.rs
src/remote/: config.rs  mod.rs  poll.rs  provision.rs  provisioning.rs  register.rs  registry_auth.rs  report.rs  request.rs
src/state/: local.rs  mod.rs  models.rs  poll.rs  read.rs  seek.rs  worker.rs
src/state/models/: app.rs  device.rs  image.rs  mod.rs  release.rs  service.rs
src/util/: ack_watch.rs  crypto.rs  docker.rs  fs.rs  http.rs  json.rs  mod.rs  request.rs  uri.rs
