[package]
name = "helios-api"
description = "Helios HTTP API"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
helios-legacy = { path = "../helios-legacy", version = "0" }
helios-remote = { path = "../helios-remote", version = "0" }
helios-state = { path = "../helios-state", version = "0" }
helios-util = { path = "../helios-util", version = "0" }

axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
reqwest.workspace = true

