[package]
name = "helios-api"
description = "Helios HTTP API"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
helios-legacy.workspace = true
helios-remote.workspace = true
helios-state.workspace = true
helios-util.workspace = true

axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

[features]
default = []
v3 = []

[dev-dependencies]
reqwest.workspace = true
