[package]
name = "helios-balenahup"
description = "Helios HostOS update (balenahup) support"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
helios-oci.workspace = true
helios-store.workspace = true
helios-util.workspace = true
helios-remote-model.workspace = true

mahler.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
