[package]
name = "helios-integration-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
bollard = "0.19.2"
reqwest = { version = "0.12.22", default-features = false, features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", default-features = false, features = [
  "rt",
  "macros",
  "time",
] }
