[workspace]
members = ["helios-util"]
resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.87"
edition = "2024"
homepage = "https://github.com/balena-io/helios"
repository = "https://github.com/balena-io/helios"
authors = ["Balena Inc. <hello@balena.io>"]
license = "Apache-2.0"
readme = "README.md"
publish = false

[package]
name = "helios-integration-tests"
version.workspace = true
edition.workspace = true

[workspace.dependencies]
axum = { version = "0.8.6", default-features = false, features = [
  "tokio",
  "http1",
  "json",
  "query",
] }
dirs = "6.0.0"
fastrand = "2.3.0"
futures-lite = { version = "2.6.1", default-features = false }
mahler = "0.24"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
  "brotli",
  "stream",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10.9", default-features = false }
tar = "0.4"
thiserror = "2"
tokio = { version = "1.47.1", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "time",
  "fs",
] }
tracing = "0.1.41"
uuid = { version = "1.18", features = ["v4"] }
zbus = { version = "5.11", default-features = false, features = ["tokio"] }

# workspace dev dependencies
bollard = "0.20"
mockito = { version = "1.7", default-features = false }
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "fmt",
  "registry",
  "ansi",
] }


[dev-dependencies]
helios-util = { path = "helios-util" }
bollard.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
