[workspace]
members = ["helios-util"]
resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.89"
edition = "2024"
homepage = "https://github.com/balena-io/helios"
repository = "https://github.com/balena-io/helios"
authors = ["Balena Inc. <hello@balena.io>"]
license = "Apache-2.0"
readme = "README.md"
publish = false

[package]
name = "helios-integration-tests"
version.workspace = true
edition.workspace = true

[workspace.dependencies]
addr = { version = "0.15.6", default-features = false }
futures-util = "0.3"
axum = { version = "0.8.9", default-features = false, features = [
  "tokio",
  "http1",
  "json",
  "query",
] }
dirs = "6.0.0"
fastrand = "2.4.1"
getrandom = { version = "0.4", default-features = false, features = ["std"] }
mahler = "0.25"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
  "brotli",
  "stream",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.11", default-features = false }
tar = "0.4"
thiserror = "2"
tokio = { version = "1.52.2", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "time",
  "fs",
  "sync",
] }
tokio-stream = { version = "0.1.18", default-features = false, features = [
  "sync",
] }
tracing = "0.1.44"
uuid = { version = "1.23", features = ["v4"] }
zbus = { version = "5.15", default-features = false, features = ["tokio"] }

# workspace dev dependencies
bollard = "0.21"
mockito = { version = "1.7", default-features = false }
tracing-subscriber = { version = "0.3.23", features = [
  "env-filter",
  "fmt",
  "registry",
  "ansi",
] }


[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[[bin]]
name = "mock-remote"
path = "src/bin/mock-remote.rs"

[dev-dependencies]
helios-util = { path = "helios-util" }
bollard.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tar.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
