[package]
name = "helios-podman"
description = "Helios support and tools to work with Podman"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
helios-oci.workspace = true
helios-util.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
ipnet.workspace = true
smart-default.workspace = true
shlex.workspace = true
umask.workspace = true
compose_spec.workspace = true
serde_json.workspace = true

[dev-dependencies]
helios-oci = { workspace = true, features = ["test-helpers"] }
