[package]
name = "helios-remote-model"
description = "Helios support for the balenaCloud device model"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
helios-util.workspace = true

serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
