[package]
name = "helios-remote-types"
description = "Helios support for balenaCloud target types"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
helios-util = { path = "../helios-util", version = "0" }

serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
