[package]
name = "helios-state"
description = "Helios state engine"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
helios-legacy = { path = "../helios-legacy", version = "0" }
helios-oci = { path = "../helios-oci", version = "0" }
helios-util = { path = "../helios-util", version = "0" }
helios-remote-types = { path = "../helios-remote-types", version = "0" }

futures-lite.workspace = true
mahler.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tracing-subscriber.workspace = true
