[package]
name = "helios-state"
description = "Helios state engine"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
userapps = []
balenahup = []

[dependencies]
helios-legacy.workspace = true
helios-oci.workspace = true
helios-util.workspace = true
helios-remote-model.workspace = true

mahler.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["time"] }
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tracing-subscriber.workspace = true
