[package]
name = "helios-store"
description = "Multi-thread and multi-process safe file-based object store"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
helios-util.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
globset.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
