[package]
name = "helios-util"
description = "Helios common tytpes and functionality"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
addr.workspace = true
axum.workspace = true
dirs.workspace = true
fastrand.workspace = true
mahler.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zbus.workspace = true
tar.workspace = true

[dev-dependencies]
mockito.workspace = true
