[package]
name = "helios"
description = "Helios main entry point"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
helios-api = { path = "../helios-api", version = "0", default-features = false }
helios-legacy = { path = "../helios-legacy", version = "0" }
helios-oci = { path = "../helios-oci", version = "0" }
helios-remote = { path = "../helios-remote", version = "0" }
helios-state = { path = "../helios-state", version = "0", default-features = false }
helios-util = { path = "../helios-util", version = "0" }

clap.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[features]
default = ["userapps", "balenahup", "v3-api"]
userapps = ["helios-state/userapps"]
balenahup = ["helios-state/balenahup"]
v3-api = ["helios-api/v3"]

[dev-dependencies]
