[package]
name = "helios"
description = "Helios main entry point"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
helios-api.workspace = true
helios-legacy.workspace = true
helios-oci.workspace = true
helios-podman = { workspace = true, optional = true }
helios-remote.workspace = true
helios-state.workspace = true
helios-store.workspace = true
helios-util.workspace = true

clap.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "macros"] }
tracing-subscriber.workspace = true
tracing.workspace = true

[features]
default = ["all"]
all = ["userapps", "balenahup", "v3-api", "podman"]
userapps = ["helios-state/userapps"]
podman = ["helios-podman", "helios-state/podman"]
balenahup = ["helios-state/balenahup", "helios-remote/balenahup"]
v3-api = ["helios-api/v3"]

[dev-dependencies]
